# urgoiz_iot

./: .gitignore  Cargo.toml  docker-compose.yml  gateway.db
.github/workflows/: ghcr-publish.yml  rebuild-builder.yml
apps/gateway/: Cargo.toml  Dockerfile  build.rs
apps/gateway/proto/: sensor.proto
apps/gateway/src/: config.rs  domain.rs  main.rs  mqtt_handler.rs  mqtt_listener.rs  parser.rs  sensor_parser.rs  sqlite_repository.rs
infra/: docker-compose.yml
infra/build-env/: Dockerfile
infra/mosquitto/: Dockerfile
