[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
prost = "0.14.3"
rumqttc = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.36.0", features = ["full"] }

[build-dependencies]
prost-build = "0.14.3"
