[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
prost = "0.14.3"
rumqttc = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
async-trait = "0.1.89"
strum ={ version = "0.26", features = ["derive"] }
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
prost-build = "0.14.3"
